--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: ^0.12.1
   pull_to_refresh: ^1.6.3
+  provider: ^4.0.4
+  shared_preferences: ^0.4.2
+  webview_flutter: ^0.3.21
 
 dev_dependencies:
   flutter_test:
